src/test/ui/parser/labeled-no-colon-expr.stderr
error: labeled expression must be followed by `:`
  --> $DIR/labeled-no-colon-expr.rs:2:5
   |
LL |     'l0 while false {}
   |     ----^^^^^^^^^^^^^^
   |     |  |
   |     |  help: add `:` after the label
   |     the label
   |
   = note: labels are used before loops and blocks, allowing e.g., `break 'label` to them

error: labeled expression must be followed by `:`
  --> $DIR/labeled-no-colon-expr.rs:3:5
   |
LL |     'l1 for _ in 0..1 {}
   |     ----^^^^^^^^^^^^^^^^
   |     |  |
   |     |  help: add `:` after the label
   |     the label
   |
   = note: labels are used before loops and blocks, allowing e.g., `break 'label` to them

error: labeled expression must be followed by `:`
  --> $DIR/labeled-no-colon-expr.rs:4:5
   |
LL |     'l2 loop {}
   |     ----^^^^^^^
   |     |  |
   |     |  help: add `:` after the label
   |     the label
   |
   = note: labels are used before loops and blocks, allowing e.g., `break 'label` to them

error: labeled expression must be followed by `:`
  --> $DIR/labeled-no-colon-expr.rs:5:5
   |
LL |     'l3 {}
   |     ----^^
   |     |  |
   |     |  help: add `:` after the label
   |     the label
   |
   = note: labels are used before loops and blocks, allowing e.g., `break 'label` to them

error: expected `while`, `for`, `loop` or `{` after a label
  --> $DIR/labeled-no-colon-expr.rs:6:9
   |
LL |     'l4 0;
   |         ^ expected `while`, `for`, `loop` or `{` after a label
   |
help: consider removing the label
   |
LL -     'l4 0;
LL +     0;
   |

error: labeled expression must be followed by `:`
  --> $DIR/labeled-no-colon-expr.rs:6:9
   |
LL |     'l4 0;
   |     ----^
   |     |  |
   |     |  help: add `:` after the label
   |     the label
   |
   = note: labels are used before loops and blocks, allowing e.g., `break 'label` to them

error: cannot use a `block` macro fragment here
  --> $DIR/labeled-no-colon-expr.rs:11:17
   |
LL |             'l5 $b;
   |             ----^^
   |             |
   |             the `block` fragment is within this context
...
LL |     m!({});
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: labeled expression must be followed by `:`
  --> $DIR/labeled-no-colon-expr.rs:14:8
   |
LL |             'l5 $b;
   |             ---- help: add `:` after the label
   |             |
   |             the label
...
LL |     m!({});
   |        ^^
   |
   = note: labels are used before loops and blocks, allowing e.g., `break 'label` to them

error: aborting due to 8 previous errors

